<resources>
    <string name="app_name">Orion</string>
    <string name="title_search">Search</string>
    <string name="title_events">Events</string>
    <string name="title_home">Home</string>
    <string name="title_placements">Placements</string>
    <string name="title_workshop">Workshops</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_here">Search here</string>
    <string name="empty_view">Nothing to show</string>
</resources>
