<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_baseline_event_24"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_placements"
        android:icon="@drawable/ic_baseline_work_outline_24"
        android:title="@string/title_placements" />

    <item
        android:id="@+id/navigation_workshop"
        android:icon="@drawable/ic_baseline_build_24"
        android:title="@string/title_workshop" />


</menu>
